---
source: crates/tests/databases-tests/src/postgres/explain_tests.rs
expression: result.details.query
---
EXPLAIN
SELECT
  coalesce(json_agg(row_to_json("%10_universe")), '[]') AS "universe"
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          coalesce(json_agg(row_to_json("%11_rows")), '[]') AS "rows"
        FROM
          (
            SELECT
              "%3_nested_fields_collect"."collected" AS "name",
              "%9_nested_fields_collect"."collected" AS "characters"
            FROM
              "public"."group_leader" AS "%0_group_leader"
              LEFT OUTER JOIN LATERAL (
                SELECT
                  row_to_json("%1_nested_fields") AS "collected"
                FROM
                  (
                    SELECT
                      "%2_group_leader.name"."name" AS "name",
                      cast("%2_group_leader.name"."popularity" as "text") AS "popularity"
                    FROM
                      (
                        SELECT
                          ("%0_group_leader"."name").*
                      ) AS "%2_group_leader.name"
                  ) AS "%1_nested_fields"
              ) AS "%3_nested_fields_collect" ON ('true')
              LEFT OUTER JOIN LATERAL (
                SELECT
                  row_to_json("%4_nested_fields") AS "collected"
                FROM
                  (
                    SELECT
                      "%8_nested_fields_collect"."collected" AS "members",
                      "%5_group_leader.characters"."name" AS "name"
                    FROM
                      (
                        SELECT
                          ("%0_group_leader"."characters").*
                      ) AS "%5_group_leader.characters"
                      LEFT OUTER JOIN LATERAL (
                        SELECT
                          json_agg(row_to_json("%6_nested_fields")) AS "collected"
                        FROM
                          (
                            SELECT
                              "%7_group_leader.characters.members"."name" AS "name",
                              cast(
                                "%7_group_leader.characters.members"."popularity" as "text"
                              ) AS "popularity"
                            FROM
                              (
                                SELECT
                                  (unnest("%5_group_leader.characters"."members")).*
                              ) AS "%7_group_leader.characters.members"
                          ) AS "%6_nested_fields"
                      ) AS "%8_nested_fields_collect" ON ('true')
                  ) AS "%4_nested_fields"
              ) AS "%9_nested_fields_collect" ON ('true')
            ORDER BY
              ("%0_group_leader"."characters")."name" DESC
          ) AS "%11_rows"
      ) AS "%11_rows"
  ) AS "%10_universe"
